# update-git-subtrees

./: .gitignore  .subtrees.json  ByteQueue.h  CMakeLists.txt  Cora.Broker.BrokerBase.h  Cora.Broker.ClassicFinalStorageLabels.h  Cora.Broker.ClassicFinalStorageTable.cpp  Cora.Broker.ColumnArrayAddress.cpp  Cora.Broker.ColumnDesc.cpp  Cora.Broker.DataQuery.h  Cora.Broker.Defs.h  Cora.Broker.FSLReader.h  Cora.Broker.FormattedDataAdvisor.cpp  Cora.Broker.MixedCsvFileReader.cpp  Cora.Broker.NohOptions.h  Cora.Broker.Record.cpp  Cora.Broker.Record.h  Cora.Broker.RecordDesc.cpp  Cora.Broker.TableBrowser.h  Cora.Broker.TableDataIndexGetter.h  Cora.Broker.TableDefsGetter.h  Cora.Broker.Toa1FileReader.h  Cora.Broker.Toa5FileReader.cpp  Cora.Broker.Toa6FileReader.h  Cora.Broker.Tob1Header.cpp  Cora.Broker.Tob1Options.h  Cora.Broker.TobFileReader.cpp  Cora.Broker.TobFileReader.h  Cora.Broker.ValueDesc.h  Cora.Broker.ValueFactory.h  Cora.Broker.ValueName.cpp  Cora.Broker.ValueName.h  Cora.CommonSettingTypes.cpp  Cora.CommonSettingTypes.h  Cora.DataSources.Bmp5Source.cpp  Cora.DataSources.CsiDbHelpers.Cursor.cpp  Cora.DataSources.CsiDbHelpers.Cursor.h  Cora.DataSources.CsiDbHelpers.DbProperties.h  Cora.DataSources.CsiDbHelpers.Dll.cpp  Cora.DataSources.CsiDbHelpers.Dll.h  (+461 more)
coratools/: .gitmodules  Application.manifest  CMakeLists.txt  Cora.Broker.BrokerBase.cpp  Cora.Broker.ClassicFinalStorageLabels.cpp  Cora.Broker.ClassicFinalStorageTable.h  Cora.Broker.ColumnArrayAddress.h  Cora.Broker.ColumnDesc.h  Cora.Broker.CustomCsvOptions.h  Cora.Broker.DataAdvisor.cpp  Cora.Broker.DataAdvisor.h  Cora.Broker.DataFileReader.cpp  Cora.Broker.DataFileReader.h  Cora.Broker.DataQuery.cpp  Cora.Broker.FSLReader.cpp  Cora.Broker.FormattedDataAdvisor.h  Cora.Broker.MixedCsvFileReader.h  Cora.Broker.RecordDesc.h  Cora.Broker.TableBrowser.cpp  Cora.Broker.TableDataIndexGetter.cpp  Cora.Broker.TableDefsGetter.cpp  Cora.Broker.TableDesc.cpp  Cora.Broker.TableDesc.h  Cora.Broker.TableLister.cpp  Cora.Broker.TableLister.h  Cora.Broker.TableResizer.cpp  Cora.Broker.TableResizer.h  Cora.Broker.Toa1FileReader.cpp  Cora.Broker.Toa5FileReader.h  Cora.Broker.Toa5Options.h  Cora.Broker.Toa6FileReader.cpp  Cora.Broker.Tob1BuffReader.cpp  Cora.Broker.Tob1BuffReader.h  Cora.Broker.Tob1Header.h  Cora.Broker.Value.cpp  Cora.Broker.Value.h  Cora.Broker.ValueDesc.cpp  Cora.Broker.ValueFactory.cpp  Cora.Broker.ValueTypes.cpp  Cora.Broker.ValueTypes.h  (+464 more)
coratools/doc/: driver.xsl
coratools/javascript/: CsiAlarmsManager.js  CsiArcTangent.js  CsiAvgRunOverTime.js  CsiClockChecker.js  CsiCompareNumbers.js  CsiCsiGreater.js  CsiCsiGreaterEqual.js  CsiCsiLessEqual.js  CsiCsiModulo.js  CsiCsiNot.js  CsiCsiNotEqual.js  CsiDataManager.js  CsiDivision.js  CsiEquivalence.js  CsiExpression.js  CsiFix.js  CsiFloor.js  CsiFormatFloat.js  CsiHyperbolicCosine.js  CsiHyperbolicTangent.js  CsiImplication.js  CsiInStr.js  CsiInStrRev.js  CsiInt.js  CsiIsFinite.js  CsiLTrim.js  CsiLast.js  CsiLess.js  CsiLessEqual.js  CsiLgrDate.js  CsiLocalToGmt.js  CsiMaxRun.js  CsiMaxRunOverTimeWithReset.js  CsiMedianRun.js  CsiMinRunOverTime.js  CsiMultiplication.js  CsiNaturalLog.js  CsiNegation.js  CsiNot.js  CsiNotEqual.js  (+30 more)
coratools/test/: CMakeLists.txt  makefile
coratools/test/DateTime/: DateTime.vcproj  main.cpp
coratools/test/FileSys/: main.cpp
coratools/test/ProgramRunner/: CMakeLists.txt
coratools/test/Schedule/: CMakeLists.txt
coratools/test/base_32_encoder/: makefile
coratools/test/claim_code/: main.cpp
coratools/test/cron/: cron.vcxproj  main.cpp  makefile  test1.xml
coratools/test/data_sources/: BIRCH.DLD  alarms.xml  data_sources.vcproj  data_sources.vcxproj  engsoft.xml  makefile  mark.xml
coratools/test/event_xml/: main.cpp  makefile
coratools/test/expressions/: makefile
coratools/test/file_index/: file_index.vcxproj  main.cpp
coratools/test/filesig/: main.cpp
doc/: coratools.dbk  makefile
javascript/: CsiAbsoluteValue.js  CsiAddition.js  CsiAndOperator.js  CsiArcCosine.js  CsiArcSine.js  CsiArcTangent2.js  CsiAvgRun.js  CsiAvgRunOverTimeWithReset.js  CsiAvgSpa.js  CsiCeiling.js  CsiColour.js  CsiComponent.js  CsiConstant.js  CsiCosine.js  CsiEtoPower.js  CsiExponentiation.js  CsiExprToken.js  CsiFormatTime.js  CsiFractionalPart.js  CsiGmtToLocal.js  CsiGreater.js  CsiGreaterEqual.js  CsiHex.js  CsiHexToDec.js  CsiHyperbolicSine.js  CsiIIF.js  CsiIsEqual.js  CsiLeft.js  CsiLen.js  CsiLogBase10.js  CsiMaxRunOverTime.js  CsiMaxSpa.js  CsiMedianRunOverTime.js  CsiMid.js  CsiMinRun.js  CsiMinRunOverTimeWithReset.js  CsiMinSpa.js  CsiModulo.js  CsiOneShotTimer.js  CsiReplace.js  (+20 more)
mbedtls/: README.md
test/DateTime/: makefile
test/ProgramRunner/: main.cpp
test/RangeList/: RangeList.vcproj  main.cpp  makefile
test/Schedule/: main.cpp
test/alert2/: alert2.vcxproj  main.cpp  makefile
test/base_32_encoder/: main.cpp
test/claim_code/: claim_code.vcxproj  makefile
test/data_sources/: cr6.xml  csidb.xml  jon-cr6-http.xml  listdb.xml  localhost.xml  main.cpp  observer.xml  one_min.xml  one_sec.xml  sqlserver.xml  virtual.xml
test/event_xml/: event_xml.vcxproj
test/expressions/: CMakeLists.txt  expressions.vcxproj  main.cpp
test/filesig/: makefile
test/fuzzy/: main.cpp
test/graph/: MyApp.cpp  MyApp.h  MyFrame.h  graph.vcxproj  makefile
test/http_client/: makefile
test/jsgenerator/: abs.xml  avg.xml  formatfloat.xml  formattime.xml  jsgenerator.vcproj  log.xml  logic.xml  makefile  reset.xml  toint.xml
test/json/: json.vcproj
test/jwt/: main.cpp  makefile
test/kdapi_smtp/: MyRequestClient.cpp  stdafx.cpp
test/license-key/: license-key.vcxproj
test/list-ports/: list-ports.vcxproj
test/logbaler/: logbaler.vcproj  makefile
test/md9emu/: makefile
test/nmea/: makefile
test/search_back/: makefile
test/settings/: main.cpp  settings.vcproj
test/sig_encrypt/: main.cpp  makefile
test/smtp-sender/: makefile
test/sockets/: sockets.vcxproj
test/software_license/: makefile
test/test_units/: main.cpp
test/uri/: makefile  uri.vcxproj
test/websocket/: makefile
(+50 files in other folders)
