cmake_minimum_required(VERSION 3.0.2)
PROJECT(coratools)


SET(win32_source_files
  Cora.DataSources.CsiDbHelpers.Cursor.cpp
  Cora.DataSources.CsiDbHelpers.DbProperties.cpp
  Cora.DataSources.CsiDbHelpers.Dll.cpp
  Cora.DataSources.CsiDbHelpers.MyThread.cpp
  Cora.DataSources.CsiDbSource.cpp
  Cora.DataSources.CsiDbSymbol.cpp
  Cora.Win32.CoralibLoader.cpp
  Cora.Win32.DllNetConn.cpp
  Cora.Win32.DllNetConnManager.cpp
  Csi.MessageWindow.cpp
  Csi.Win32.AppExcluder.cpp 
  Csi.Win32.FileSystemObject.cpp
  Csi.Win32.Mutex.cpp
  Csi.Win32.OsException.cpp
  Csi.Win32.Process.cpp
  Csi.Win32.ProgramRunner.cpp
  Csi.Win32.ReadFileMapping.cpp
  Csi.Win32.ReadWriteFile.cpp
  Csi.Win32.RegistryManager.cpp
  Csi.Win32.SerialPortBase.cpp
  Csi.Win32.SocketConnection.cpp
  Csi.Win32.SocketListener.cpp
  Csi.Win32.SocketTcpSock.cpp
  Csi.Win32.SocketUdpServer.cpp
  Csi.Win32.TapiApplication.cpp
  Csi.Win32.TapiError.cpp
  Csi.Win32.TapiLine.cpp
  Csi.Win32.Win32Thread.cpp
  Csi.Win32.WinSockBase.cpp
  Csi.Win32.WinSockService.cpp
  Csi.Win32.WinsockException.cpp
  Csi.Win32Dispatch.cpp)

SET(posix_source_files
  Csi.Posix.CriticalSection.cpp
  Csi.Posix.OsException.cpp
  Csi.Posix.Mutex.cpp
  Csi.Posix.RegistryManager.cpp
  Csi.Posix.Thread.cpp
  Csi.Posix.Condition.cpp
  Csi.Posix.FileSystemObject.cpp
  Csi.Posix.ReadFileMapping.cpp
  Csi.Posix.ReadWriteFile.cpp
  Csi.Posix.ProgramRunner.cpp
  Csi.Posix.SocketBase.cpp
  Csi.Posix.SocketTcpService.cpp
  Csi.Posix.SocketTcpSock.cpp
  Csi.Posix.SocketConnection.cpp
  Csi.Posix.SocketUdpServer.cpp
  Cora.Posix.CoralibLoader.cpp
  Cora.Posix.DllNetConn.cpp
  Cora.Posix.DllNetConnManager.cpp
  Csi.Posix.SerialPortBase.cpp)

SET(cora_broker_files
  Cora.Broker.BrokerBase.cpp
  Cora.Broker.ClassicFinalStorageLabels.cpp
  Cora.Broker.ClassicFinalStorageTable.cpp
  Cora.Broker.ColumnArrayAddress.cpp
  Cora.Broker.ColumnDesc.cpp
  Cora.Broker.DataAdvisor.cpp
  Cora.Broker.DataFileReader.cpp
  Cora.Broker.DataQuery.cpp
  Cora.Broker.FormattedDataAdvisor.cpp
  Cora.Broker.Record.cpp
  Cora.Broker.RecordDesc.cpp
  Cora.Broker.TableBrowser.cpp
  Cora.Broker.TableDataIndexGetter.cpp
  Cora.Broker.TableDefsGetter.cpp
  Cora.Broker.TableDesc.cpp
  Cora.Broker.TableLister.cpp
  Cora.Broker.TableResizer.cpp
  Cora.Broker.Toa1FileReader.cpp
  Cora.Broker.Toa5FileReader.cpp
  Cora.Broker.Toa6FileReader.cpp
  Cora.Broker.Tob1Header.cpp
  Cora.Broker.Tob1BuffReader.cpp
  Cora.Broker.TobFileReader.cpp
  Cora.Broker.MixedCsvFileReader.cpp
  Cora.Broker.FSLReader.cpp
  Cora.Broker.XmlFileReader.cpp
  Cora.Broker.Value.cpp
  Cora.Broker.ValueDesc.cpp
  Cora.Broker.ValueFactory.cpp
  Cora.Broker.ValueName.cpp
  Cora.Broker.ValueTypes.cpp)

SET(cora_device_files
  Cora.Device.Alert2DataSender.cpp
  Cora.Device.Alert2SensorReportCreator.cpp
  Cora.Device.AlohaMessagesLogQuery.cpp
  Cora.Device.AlohaMessagesMonitor.cpp
  Cora.Device.AlohaStationAreaCreator.cpp
  Cora.Device.Bmp3Identifier.cpp
  Cora.Device.ClockSetter.cpp
  Cora.Device.ClassicASender.cpp
  Cora.Device.ClassicStatsDumper.cpp
  Cora.Device.ClassicStatChanger.cpp
  Cora.Device.CollectArea.CollectAreaMaintainer.cpp
  Cora.Device.CollectArea.CollectAreaSettingFactory.cpp
  Cora.Device.CollectArea.CollectStateExporter.cpp
  Cora.Device.CollectArea.CollectAreaDeleter.cpp
  Cora.Device.CollectArea.FsAreaCreator.cpp
  Cora.Device.CollectArea.InlocsAreaCreator.cpp
  Cora.Device.CollectAreaPoller.cpp
  Cora.Device.CollectAreaResetter.cpp
  Cora.Device.CollectAreaSettingsOverrider.cpp
  Cora.Device.CollectAreasEnumerator.cpp
  Cora.Device.CollectArea.SettingsEnumerator.cpp
  Cora.Device.CollectArea.SettingSetter.cpp
  Cora.Device.CollectArea.SettingsSetter.cpp
  Cora.Device.CollectArea.TableAreaCloner.cpp
  Cora.Device.CollectArea.TableAreaCreator.cpp
  Cora.Device.CollectAreasConfigGetter.cpp
  Cora.Device.CollectAreasConfigSetter.cpp
  Cora.Device.CollectScheduleResetter.cpp
  Cora.Device.CommResourceManager.cpp
  Cora.Device.ConnectionManager.cpp
  Cora.Device.DataFileImportAreaCreator.cpp
  Cora.Device.DataMonitor.cpp
  Cora.Device.DeviceBase.cpp
  Cora.Device.DeviceSettingFactory.cpp
  Cora.Device.DeviceSettingTypes.cpp
  Cora.Device.DeviceTimeEstimator.cpp
  Cora.Device.FileController.cpp
  Cora.Device.FileLister.cpp
  Cora.Device.FileReceiver.cpp
  Cora.Device.FileSender.cpp
  Cora.Device.FilesSynchroniser.cpp
  Cora.Device.FslGetter.cpp
  Cora.Device.HoleDeleter.cpp
  Cora.Device.HoleLister.cpp
  Cora.Device.LinkTimeResetter.cpp
  Cora.Device.LinkWfMessagesGetter.cpp
  Cora.Device.LoggerQuery.cpp
  Cora.Device.LoggerQueryEx.cpp
  Cora.Device.LoggerQueryFile.cpp
  Cora.Device.LowLevelLogAdvisor.cpp
  Cora.Device.ManualPoller.cpp
  Cora.Device.ManualQuery.cpp
  Cora.Device.MemoryReceiver.cpp
  Cora.Device.MemorySender.cpp
  Cora.Device.PakbusNeighbourFinder.cpp
  Cora.Device.PoolMonitor.cpp
  Cora.Device.ProgramFileReceiver.cpp
  Cora.Device.ProgramFileSender.cpp
  Cora.Device.ProgramStatsGetter.cpp
  Cora.Device.ProtocolIdentifier.cpp
  Cora.Device.Rf95tTester.cpp
  Cora.Device.ScheduledTablesMonitor.cpp
  Cora.Device.SettingsEnumerator.cpp
  Cora.Device.SettingSetter.cpp
  Cora.Device.SettingsOverrider.cpp
  Cora.Device.SettingsSetter.cpp
  Cora.Device.TableDefsRefresher.cpp
  Cora.Device.TableResetter.cpp
  Cora.Device.TablesEnumerator.cpp
  Cora.Device.TerminalEmulator.cpp
  Cora.Device.VariableGetter.cpp
  Cora.Device.VariableSetter.cpp
  Cora.Device.Defs.cpp
  Cora.Device.LinkCloser.cpp)

SET(cora_datasources_files
  Cora.DataSources.Bmp5Source.cpp
  Cora.DataSources.SourceBase.cpp
  Cora.DataSources.HttpSource.cpp
  Cora.DataSources.LgrNetSource.cpp
  Cora.DataSources.LgrNetSymbols.cpp
  Cora.DataSources.Manager.cpp
  Cora.DataSources.Request.cpp
  Cora.DataSources.SymbolBrowser.cpp
  Cora.DataSources.SymbolBase.cpp
  Cora.DataSources.DataFileSource.cpp
  Cora.DataSources.DataFileSymbol.cpp
  Cora.DataSources.SinkBase.cpp
  Cora.DataSources.TableFieldUri.cpp
  Cora.DataSources.VirtualSource.cpp)

SET(cora_lgrnet_files
  Cora.LgrNet.AccessTokenGetter.cpp
  Cora.LgrNet.BackupCreator.cpp
  Cora.LgrNet.BatchModeMaintainer.cpp
  Cora.LgrNet.BranchDeleter.cpp
  Cora.LgrNet.BranchMover.cpp
  Cora.LgrNet.BrokerBrowser2.cpp
  Cora.LgrNet.BrokerBrowser.cpp
  Cora.LgrNet.BrokerLister.cpp
  Cora.LgrNet.CollectionStatusMonitor.cpp
  Cora.LgrNet.CommPortsLister.cpp
  Cora.LgrNet.CountriesEnumerator.cpp
  Cora.LgrNet.DataManager.cpp
  Cora.LgrNet.DefaultSettingsGetter.cpp
  Cora.LgrNet.DeviceAdder.cpp
  Cora.LgrNet.DeviceDefaultSettingsLister.cpp
  Cora.LgrNet.DeviceMapper.cpp
  Cora.LgrNet.DeviceRelationsDescriber.cpp
  Cora.LgrNet.DeviceRenamer.cpp
  Cora.LgrNet.DirectoryCreator.cpp
  Cora.LgrNet.DirectoryLister.cpp
  Cora.LgrNet.DiscLister.cpp
  Cora.LgrNet.FileRetriever.cpp
  Cora.LgrNet.LgrNetSettingFactory.cpp
  Cora.LgrNet.LgrNetSettingTypes.cpp
  Cora.LgrNet.LogAdvisor.cpp
  Cora.LgrNet.LogMessageAdder.cpp
  Cora.LgrNet.LogsClearer.cpp
  Cora.LgrNet.LogsZipper.cpp
  Cora.LgrNet.LogQuery.cpp
  Cora.LgrNet.NetworkLocker.cpp
  Cora.LgrNet.NetworkMapper.cpp
  Cora.LgrNet.OperationsEnumerator.cpp
  Cora.LgrNet.PakbusRoutersEnumerator.cpp
  Cora.LgrNet.ServerTimeEstimator.cpp
  Cora.LgrNet.SettingsEnumerator.cpp
  Cora.LgrNet.SettingSetter.cpp
  Cora.LgrNet.SettingsSetter.cpp
  Cora.LgrNet.SnapshotRestorer.cpp
  Cora.LgrNet.TapiLinesEnumerator.cpp
  Cora.LgrNet.XmlNetworkMapMaker.cpp
  Cora.LgrNet.XmlNetworkMapChanger.cpp
  Cora.LgrNet.Defs.cpp
  Cora.LgrNet.ModemTypesLister.cpp
  Cora.LgrNet.ModemTypeAdder.cpp
  Cora.LgrNet.ModemTypeChanger.cpp
  Cora.LgrNet.PooledResourcesMonitor.cpp
  Cora.LgrNet.ReplicationLogin.cpp
  Cora.LgrNet.UdpDiscoverer.cpp
  Cora.LgrNet.ViewsLister.cpp
  Cora.LgrNet.ViewAdder.cpp
  Cora.LgrNet.ViewChanger.cpp
  Cora.LgrNet.ViewRemover.cpp
  Cora.LgrNet.ViewMonitor.cpp
  Cora.LgrNet.ViewMapper.cpp)

SET(cora_pbrouter_files
  Cora.PbRouter.CommResourceManager.cpp
  Cora.PbRouter.LinksEnumerator.cpp
  Cora.PbRouter.NetworkTracker.cpp
  Cora.PbRouter.NodesLister.cpp
  Cora.PbRouter.PakctrlMessageSender.cpp
  Cora.PbRouter.PbRouterBase.cpp
  Cora.PbRouter.Pinger.cpp
  Cora.PbRouter.RouterResetter.cpp
  Cora.PbRouter.SettingsGetter.cpp
  Cora.PbRouter.SettingsSetter.cpp)

SET(cora_sec2_files
  Cora.Sec2.AccountAdder.cpp
  Cora.Sec2.AccountChanger.cpp
  Cora.Sec2.AccountDeleter.cpp
  Cora.Sec2.AccountsEnumerator.cpp
  Cora.Sec2.Enabler.cpp
  Cora.Sec2.Locker.cpp
  Cora.Sec2.Sec2Base.cpp
  Cora.Sec2.StatusMonitor.cpp)  
  

set(cora_tasks_files
  Cora.Tasks.Defs.cpp
  Cora.Tasks.TaskAdder.cpp
  Cora.Tasks.TaskRemover.cpp
  Cora.Tasks.TasksBase.cpp
  Cora.Tasks.TasksEnumerator.cpp
  Cora.Tasks.TasksSettingFactory.cpp
  Cora.Tasks.SettingsEnumerator.cpp
  Cora.Tasks.SettingsSetter.cpp
  Cora.Tasks.TasksEnabler.cpp
  Cora.Tasks.TaskTrigger.cpp)


SET(cora_files
  ${cora_broker_files}
  Cora.ClientBase.cpp
  Cora.CommonSettingTypes.cpp
  ${cora_device_files}
  ${cora_lgrnet_files}
  ${cora_datasources_files}
  ${cora_pbrouter_files}
  ${cora_sec2_files}
  ${cora_tasks_files}
  Cora.SettingHandler.cpp)

SET(devconfig_files
  Csi.DevConfig.ConfigSummary.cpp
  Csi.DevConfig.CoraPakbusSession.cpp
  Csi.DevConfig.ControlTran.cpp
  Csi.DevConfig.DeviceDesc.cpp
  Csi.DevConfig.FileSender.cpp
  Csi.DevConfig.LibraryManager.cpp
  Csi.DevConfig.Message.cpp
  Csi.DevConfig.SerialSessionDriver.cpp
  Csi.DevConfig.Session.cpp
  Csi.DevConfig.EmulatedSession.cpp
  Csi.DevConfig.PakbusSession.cpp
  Csi.DevConfig.SettingCatalog.cpp
  Csi.DevConfig.SettingComp.Bitfield.cpp
  Csi.DevConfig.SettingComp.CompBase.cpp
  Csi.DevConfig.SettingComp.CompScalar.cpp
  Csi.DevConfig.SettingComp.DescBase.cpp
  Csi.DevConfig.SettingComp.Factory.cpp
  Csi.DevConfig.SettingComp.StringComp.cpp
  Csi.DevConfig.SettingComp.CompIpAddr.cpp
  Csi.DevConfig.SettingComp.CompIpAddr6.cpp
  Csi.DevConfig.SettingComp.CompIpAddrAny.cpp
  Csi.DevConfig.SettingComp.TlsKey.cpp
  Csi.DevConfig.SettingComp.TlsCertificate.cpp
  Csi.DevConfig.SettingComp.MdFloatArray.cpp
  Csi.DevConfig.SettingComp.CompSsid.cpp
  Csi.DevConfig.SettingComp.CompSerialNo.cpp
  Csi.DevConfig.SettingComp.UrlAddress.cpp
  Csi.DevConfig.SettingComp.TimeStamp.cpp
  Csi.DevConfig.Setting.cpp
  Csi.DevConfig.SettingDesc.cpp
  Csi.DevConfig.SettingPoller.cpp
  Csi.DevConfig.SettingsManager.cpp
  Csi.DevConfig.SummaryConverterBase.cpp
  Csi.DevConfig.UdpDiscoverer.cpp)
  
SET(pakbus_files
  Csi.PakBus.AesCipher.cpp
  Csi.PakBus.BlowfishCipher.cpp
  Csi.PakBus.Bmp5Message.cpp
  Csi.PakBus.Bmp5TableDef.cpp
  Csi.PakBus.HopMetric.cpp
  Csi.PakBus.LowLevelDecoder.cpp
  Csi.PakBus.Message.cpp
  Csi.PakBus.PakBusTran.cpp
  Csi.PakBus.PakCtrlMessage.cpp
  Csi.PakBus.PortBase.cpp
  Csi.PakBus.Router.cpp
  Csi.PakBus.RouterHelpers.GetNeighboursTran.cpp
  Csi.PakBus.RouterHelpers.HelloTran.cpp
  Csi.PakBus.RouterHelpers.SendNeighboursTran.cpp
  Csi.PakBus.SerialDecode.cpp
  Csi.PakBus.SerialPacket.cpp
  Csi.PakBus.SerialPacketBase.cpp
  Csi.PakBus.SerialPort.cpp
  Csi.PakBus.TcpSerialPort.cpp
  Csi.PakBus.TranEcho.cpp
  Csi.PakBus.TranGetSettings.cpp
  Csi.PakBus.TranSetSettings.cpp
  Csi.PakBus.WebsockPort.cpp)

SET(portable_files
  coratools.strings.cpp
  Cora.Setting.cpp
  Csi.Alert2.cpp
  Csi.Base32.cpp
  Csi.Base64.cpp
  Csi.BlowFish.cpp
  Csi.ByteQueue.cpp
  Csi.CommandLine.cpp
  Csi.ChallengeResponder.cpp
  Csi.CronPredictor.cpp
  Csi.CsvRec.cpp
  Csi.Digest.cpp
  ${devconfig_files}
  Csi.Events.cpp
  Csi.Expression.Editor.cpp
  Csi.Expression.ExpressionHandler.cpp
  Csi.Expression.JsGenerator.cpp
  Csi.Expression.JsResourceManager.cpp
  Csi.Expression.Token.cpp
  Csi.Expression.TokenFactory.cpp
  Csi.Expression.TokenTypes.cpp
  Csi.Alarms.ActionBase.cpp
  Csi.Alarms.ActionTemplateBase.cpp
  Csi.Alarms.ActionEmail.cpp
  Csi.Alarms.ActionExec.cpp
  Csi.Alarms.ActionForward.cpp
  Csi.Alarms.Alarm.cpp
  Csi.Alarms.AlarmLogger.cpp
  Csi.Alarms.EmailProfile.cpp
  Csi.Alarms.Manager.cpp
  Csi.Alarms.Condition.cpp
  Csi.Alarms.TestData.cpp
  Csi.FloatUtils.cpp
  Csi.Graphics.Colour.cpp
  Csi.Html.Document.cpp
  Csi.Html.Tag.cpp
  Csi.Html.Text.cpp
  Csi.HttpClient.cpp
  Csi.HttpClient.WebSocket.cpp
  Csi.InstanceValidator.cpp
  Csi.Jwt.cpp
  Csi.LgrDate.cpp
  Csi.LoginManager.cpp
  Csi.LogBaler.cpp
  Csi.LogByte.cpp
  Csi.Messaging.Connection.cpp
  Csi.Messaging.Message.cpp
  Csi.Messaging.Router.cpp
  Csi.Messaging.Server.cpp
  Csi.Messaging.Stub.cpp
  Csi.Messaging.ProxyConn.cpp
  Csi.Messaging.ProxyListener.cpp
  Csi.ModalCounter.cpp
  Csi.MqttClient.cpp
  Csi.NmeaParser.cpp
  Csi.Passwd.cpp
  Csi.ResourceManager.cpp
  Csi.Rfc2217.TerminalServerPort.cpp
  Csi.SocketListener.cpp
  Csi.SocketBase.cpp
  ${pakbus_files}
  Csi.RangeList.cpp
  Csi.StringLoader.cpp
  Csi.SimpleDispatch.cpp
  Csi.TokenStringExpander.cpp
  Csi.TlsCapNegotiator.cpp
  Csi.TlsContext.cpp
  CsiTypes.cpp
  Csi.Utils.cpp
  Csi.VersionNumber.cpp
  Csi.Tob2.DataFile.cpp
  Csi.Tob2.Frame.cpp
  Csi.Uri.cpp
  Csi.Xml.Element.cpp
  Csi.Xml.EventParser.cpp
  Csi.Xml.Tools.cpp
  Csi.Xml.Utils.cpp
  Csi.IniFile.cpp
  Csi.Units.cpp
  Csi.WorkerThread.cpp
  Csi.SignedJson.cpp
  Csi.Json.cpp
  Csi.Hmac.cpp
  MsgStream.cpp
  OneShot.cpp
  Packet.cpp
  Scheduler.cpp
  StrAsc.cpp
  Stream.cpp
  StrUni.cpp
  trace.cpp
  crc32.cpp
  Csi.SocketAddress.cpp
  Csi.SmtpSender.cpp
  Csi.Curl.cpp
  Csi.SoftwareLicense.cpp
  Csi.ClaimCode.cpp)

set(mbedtls_source
  mbedtls/library/aes.c
  mbedtls/library/aesni.c
  mbedtls/library/arc4.c
  mbedtls/library/aria.c
  mbedtls/library/asn1parse.c
  mbedtls/library/asn1write.c
  mbedtls/library/base64.c
  mbedtls/library/bignum.c
  mbedtls/library/blowfish.c
  mbedtls/library/camellia.c
  mbedtls/library/ccm.c
  mbedtls/library/certs.c
  mbedtls/library/chacha20.c
  mbedtls/library/chachapoly.c
  mbedtls/library/cipher.c
  mbedtls/library/cipher_wrap.c
  mbedtls/library/cmac.c
  mbedtls/library/ctr_drbg.c
  mbedtls/library/debug.c
  mbedtls/library/des.c
  mbedtls/library/dhm.c
  mbedtls/library/ecdh.c
  mbedtls/library/ecdsa.c
  mbedtls/library/ecjpake.c
  mbedtls/library/ecp.c
  mbedtls/library/ecp_curves.c
  mbedtls/library/entropy.c
  mbedtls/library/entropy_poll.c
  mbedtls/library/error.c
  mbedtls/library/gcm.c
  mbedtls/library/havege.c
  mbedtls/library/hkdf.c
  mbedtls/library/hmac_drbg.c
  mbedtls/library/md.c
  mbedtls/library/md2.c
  mbedtls/library/md4.c
  mbedtls/library/md5.c
  mbedtls/library/memory_buffer_alloc.c
  mbedtls/library/net_sockets.c
  mbedtls/library/nist_kw.c
  mbedtls/library/oid.c
  mbedtls/library/padlock.c
  mbedtls/library/pem.c
  mbedtls/library/pk.c
  mbedtls/library/pk_wrap.c
  mbedtls/library/pkcs11.c
  mbedtls/library/pkcs12.c
  mbedtls/library/pkcs5.c
  mbedtls/library/pkparse.c
  mbedtls/library/pkwrite.c
  mbedtls/library/platform.c
  mbedtls/library/platform_util.c
  mbedtls/library/poly1305.c
  mbedtls/library/psa_crypto.c
  mbedtls/library/psa_crypto_client.c
  mbedtls/library/psa_crypto_driver_wrappers.c
  mbedtls/library/psa_crypto_ecp.c
  mbedtls/library/psa_crypto_rsa.c
  mbedtls/library/psa_crypto_se.c
  mbedtls/library/psa_crypto_slot_management.c
  mbedtls/library/psa_crypto_storage.c
  mbedtls/library/psa_its_file.c
  mbedtls/library/ripemd160.c
  mbedtls/library/rsa.c
  mbedtls/library/rsa_internal.c
  mbedtls/library/sha1.c
  mbedtls/library/sha256.c
  mbedtls/library/sha512.c
  mbedtls/library/ssl_cache.c
  mbedtls/library/ssl_ciphersuites.c
  mbedtls/library/ssl_cli.c
  mbedtls/library/ssl_cookie.c
  mbedtls/library/ssl_msg.c
  mbedtls/library/ssl_srv.c
  mbedtls/library/ssl_ticket.c
  mbedtls/library/ssl_tls.c
  mbedtls/library/threading.c
  mbedtls/library/timing.c
  mbedtls/library/version.c
  mbedtls/library/version_features.c
  mbedtls/library/x509.c
  mbedtls/library/x509_create.c
  mbedtls/library/x509_crl.c
  mbedtls/library/x509_crt.c
  mbedtls/library/x509_csr.c
  mbedtls/library/x509write_crt.c
  mbedtls/library/x509write_csr.c
  mbedtls/library/xtea.c)


set(graphics_files
  Csi.Graphics.NestedRect.cpp
  Csi.Graphics.Graph.cpp
  Csi.Graphics.GraphAxis.cpp
  Csi.Graphics.GraphTrace.cpp
  Csi.Graphics.Scale.cpp
  Csi.Graphics.Shapebase.cpp)


include_directories(mbedtls/include)

add_custom_target(javascript ALL
  make
  WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/javascript)
IF(WIN32)
  add_definitions(-DUNICODE -D_CRT_SECURE_NO_WARNINGS)
  ADD_LIBRARY(coratools STATIC
    ${win32_source_files}
    ${cora_files}
    ${portable_files}
    ${graphics_files}
    ${mbedtls_source})
  add_dependencies(coratools javascript)
ENDIF(WIN32)
IF(UNIX)
  ADD_DEFINITIONS(-fPIC -fvisibility=hidden)
  IF("${CMAKE_BUILD_TYPE}" STREQUAL "Debug")
    ADD_DEFINITIONS(-D_DEBUG)  
  ENDIF("${CMAKE_BUILD_TYPE}" STREQUAL "Debug")
  ADD_LIBRARY(coratools
    ${posix_source_files}
    ${cora_files}
    ${portable_files}
    ${mbedtls_source})
  add_dependencies(coratools javascript)
ENDIF(UNIX)


